# router/router.go
@@ -55,7 +55,7 @@ func SDRouter() (*gin.Engine, error) {
 		clinicGroup.POST("/getNearbySpecialists", handlers.GetNearbySpeialists)
 		clinicGroup.POST("/addFavorites/:addressId", handlers.AddFavoriteClinics)
 		clinicGroup.GET("/getFavorites/:addressId", handlers.GetFavoriteClinics)
-		clinicGroup.GET("/getNetwork/:addressId", handlers.GetFavoriteClinics)
+		clinicGroup.GET("/getNetwork/:addressId", handlers.GetNetworkClinics)
 		clinicGroup.POST("/removeFavorites/:addressId", handlers.RemoveFavoriteClinics)
 
 	}
