# swagger.yaml
@@ -430,6 +430,30 @@ paths:
           description: "Internal server error occured"
       security:
         - Bearer: []
+  /v1/clinic/getNetwork/{addressId}:
+    get:
+      tags:
+       - "Registration APIs (R of CRUD)"
+      summary: "Get all favorite clinics favorited by GD"
+      description: "Get a list of clinics nearby current admin clinic"
+      operationId: "GetNetworkClinics"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "path"
+        type: string
+        name: "addressId"
+        description: "unique address id of registered clinic"
+        required: true
+      responses:
+        '200':
+          $ref: '#/responses/GetNearbyClinicsResponse'
+        '401':
+          description: "Unauthorized: Bad request or authorization details"
+        '500':
+          description: "Internal server error occured"
+      security:
+        - Bearer: []
   /v1/referrals:
     post:
       tags:
